--- a/index.html
+++ b/index.html
@@ -38,5 +38,75 @@
             <a href="#" class="button">Написать мне</a>
         </div>
 </div>
+
+<section class="about-me">
+    <div class="rect about-me">
+        <h2 class="zagolovok2">Обо мне</h2>
+        <p class="text-section2">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+    </div>
+</section>
+<section class="projects">
+    <div class="rect projects">
+    <ul class="projects-list">
+        <li class="projects-items">
+            <img src="images/icon.png" alt="projects-ico" class="project-icon"><!--
+        --><div class="info">
+                <h3 class="projects-title">40+</h3>
+                <p class="projects-description">проектов</p>
+            </div>
+        </li><!--
+        --><li class="projects-items">
+            <img src="images/icon.png" alt="projects-ico" class="project-icon"><!--
+        --><div class="info">
+                <h3 class="projects-title">40+</h3>
+                <p class="projects-description">проектов</p>
+            </div>
+        </li><!--
+        --><li class="projects-items">
+            <img src="images/icon.png" alt="projects-ico" class="project-icon"><!--
+        --><div class="info">
+                <h3 class="projects-title">40+</h3>
+                <p class="projects-description">проектов</p>
+            </div>
+        </li><!--
+        --><li class="projects-items">
+            <img src="images/icon.png" alt="projects-ico" class="project-icon"><!--
+        --><div class="info">
+                <h3 class="projects-title">40+</h3>
+                <p class="projects-description">проектов</p>
+            </div>
+        </li><!--
+        --><li class="projects-items">
+            <img src="images/icon.png" alt="projects-ico" class="project-icon"><!--
+        --><div class="info">
+                <h3 class="projects-title">40+</h3>
+                <p class="projects-description">проектов</p>
+            </div>
+        </li><!--
+        --><li class="projects-items last">
+            <img src="images/icon.png" alt="projects-ico" class="project-icon"><!--
+        --><div class="info">
+                <h3 class="projects-title">40+</h3>
+                <p class="projects-description">проектов</p>
+            </div>
+        </li>
+    </ul>
+</div>
+</section>
+<section class="work">
+    <div class="rect work">
+        <h2 class="zagolovok2 work">Как я работаю</h2>
+        <p class="text-section2 work">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+        <iframe width="1110" height="600" src="https://www.youtube.com/embed/TPjepTzH1iQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
+    </div>
+</section>
+<footer class="copyright">
+    <div class="rect footer">
+        <h4 class="footer-title">Иванов Иван</h4>
+        <p class="footer-description">(с) 2018. Все права защищены.</p>
+    </div>
+</footer>
+
 </body>
 </html>
